# Npuzzle

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: codeql-analysis.yml
include/: Heuristic.h  Node.h  Npuzzle.h  PriorityQueue.h  PuzzExcept.h
src/: ASearch.cpp  ASearchOptimal.cpp  AStarSearch.cpp  GreedySearch.cpp  Heuristic.cpp  IDASearch.cpp  IDAStarSearch.cpp  LinearConflict.cpp  Main.cpp  Manhattan.cpp  ManhattanNode.cpp  Node.cpp  NodeHeuristic.cpp  NodeMove.cpp  NodeOperators.cpp  NodeUtils.cpp  OptimalH.cpp  PriorityQueue.cpp  PuzzExcept.cpp  ReadPuzzle.cpp  UniformCostSearch.cpp  Utils.cpp  wideSearch.cpp
src/old/: ALL_HEURISTIC.cpp  ASearch.cpp  ASearchOptimal.cpp  ASearchOptimal_.cpp  Heuristic.cpp  Heuristic.h  NodeHeuristic.cpp
tests/: GH  Npuzzle  big_100  done  easy  f10_1  f10_2  f10_3  f10_4  f14_1  f15_1  f20_1  f3_1  f3_2  f3_3  f4_1  f4_2  f4_3  f4_4  f4_5  f4_6  f50_1  f5_1  f5_2  f5_3  f5_4  f5_5  order  res_npuzzle-gen.py  snail_4  snail_5  snake  solvable.sh  table  temp  test  test_file  u3_1  u3_2  u3_3  (+8 more)
tests/bad/: bad_comm_1  bad_comm_2  bad_order  f2_1  less_colums  less_rows  no_side  one_line  only_comment  same_fields
